--- a/app/src/main/res/layout-land/importmedication.xml
+++ b/app/src/main/res/layout-land/importmedication.xml
@@ -7,46 +7,65 @@
     android:layout_height="match_parent">
 <!--    android:padding="16dp">-->
 
-    <RadioGroup
-        android:layout_width="350dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="24dp"
-        android:orientation='horizontal'
+    <Button
+        android:id="@+id/setReminderButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="264dp"
+        android:text="Set Reminder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.805"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/newReminderTime"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup2"
+        android:layout_width="509dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toEndOf="@+id/editText2"
         app:layout_constraintTop_toBottomOf="@+id/editText">
 
         <RadioButton
             android:id="@+id/radioButton"
-            android:layout_width="121dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:checked="true"
-            android:text="Daily" />
+            android:text="@string/radioDaily" />
 
         <RadioButton
             android:id="@+id/radioButton2"
-            android:layout_width="125dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Weekly" />
+            android:layout_weight="1"
+            android:text="@string/radioWeekly" />
 
         <RadioButton
             android:id="@+id/radioButton3"
-            android:layout_width="96dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Monthly" />
-
+            android:layout_weight="1"
+            android:text="4 Weekly" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="59dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textPersonName"
+        android:inputType="textCapWords"
         android:padding="8dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,68 +73,88 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="334dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="179dp"
+        android:layout_height="69dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="88dp"
         android:ems="10"
         android:hint="Dosage"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/saveButton"
-        android:layout_width="416dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="340dp"
+        android:layout_width="75dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="4dp"
         android:background="#5867B8"
         android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="12sp"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="39dp"
+        android:layout_width="886dp"
+        android:layout_height="67dp"
         android:background="@color/colorPrimary"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="sans-serif"
         android:gravity="center"
-        android:text="Import Meds"
-        android:textAlignment="center"
+        android:paddingLeft="90dp"
+        android:text="New Medication"
+        android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editText5"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginTop="23dp"
-        android:ems="10"
-        android:hint="(Optional) Supply"
-        android:inputType="time"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+    <Button
+        android:id="@+id/closeButton"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="2dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="2dp"
+        app:elevation="0dp"
+        app:icon="@drawable/ic_close"
+        app:iconPadding="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="Reminder time"
-        android:inputType="time"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        tools:layout_editor_absoluteX="0dp" />
+    <TextView
+        android:id="@+id/newReminderTime"
+        android:layout_width="164dp"
+        android:layout_height="41dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="264dp"
+        android:text="17:38 PM"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="244dp"
+        android:text="Reminder Time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
