--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -7,9 +7,32 @@
     android:layout_height="match_parent">
 <!--    android:padding="16dp">-->
 
+    <TextView
+        android:id="@+id/newReminderTime"
+        android:layout_width="wrap_content"
+        android:layout_height="41dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="308dp"
+        android:text="17:38 PM"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/setReminderButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="308dp"
+        android:text="Set Reminder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintStart_toEndOf="@+id/newReminderTime"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
     <RadioGroup
-        android:layout_width="167dp"
-        android:layout_height="142dp"
+        android:id="@+id/radioGroup"
+        android:layout_width="187dp"
+        android:layout_height="148dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
@@ -32,15 +55,17 @@
         <RadioButton
             android:id="@+id/radioButton3"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:text="4 Weekly" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="478dp"
-        android:layout_height="59dp"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textCapWords"
@@ -55,11 +80,12 @@
         android:id="@+id/editText2"
         android:layout_width="184dp"
         android:layout_height="55dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="88dp"
         android:ems="10"
         android:hint="Dosage"
-        android:inputType="textPersonName"
-        android:padding="8dp"
+        android:inputType="number"
+        android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +112,7 @@
         android:layout_width="454dp"
         android:layout_height="63dp"
         android:background="@color/colorPrimary"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:paddingLeft="90dp"
         android:text="New Medication"
@@ -99,32 +125,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginTop="96dp"
-        android:ems="10"
-        android:hint="Reminder time"
-        android:inputType="time"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
-
-    <EditText
-        android:id="@+id/editText5"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginTop="25dp"
-        android:ems="10"
-        android:hint="(Optional) Supply"
-        android:inputType="time"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        tools:layout_editor_absoluteX="-1dp" />
-
     <Button
         android:id="@+id/closeButton"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:paddingLeft="0dp"
@@ -136,5 +140,15 @@
         app:iconPadding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="288dp"
+        android:paddingLeft="12dp"
+        android:text="Reminder Time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
